--- a/waow/waow.csproj
+++ b/waow/waow.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Figgle" Version="0.4.0" />
+    </ItemGroup>
+
 </Project>
